--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   padding-top: 100px;
+  
 }
 
 button {
@@ -54,7 +55,7 @@ nav a:hover {
 #page-body {
   max-width: 700px;
   margin: auto;
-  padding-top: 72px;
+  padding-right: 100px;
 }
 
 .article-list-item {
